# moex-client

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: actual_indexes_dump.rs
src/: async.rs  blocking.rs  lib.rs  models.rs  moex.rs  prelude.rs
src/models/: domain.rs  selectors.rs  tests.rs  wire.rs
src/moex/: client.rs  constants.rs  convert.rs  decode.rs  payload.rs  tests.rs  wire.rs
tests/: indexes_integration.rs
