[package]
name = "moex-client"
version = "0.1.0"
edition = "2024"
authors = ["hexqnt <kvover@gmail.com>"]
description = "Strictly-typed, unofficial Rust client for Moscow Exchange ISS API."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hexqnt/moex-client"
homepage = "https://github.com/hexqnt/moex-client"
documentation = "https://docs.rs/moex-client"
keywords = ["moex", "iss", "api-client", "exchange", "finance"]
categories = ["api-bindings", "web-programming::http-client"]

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["blocking", "rustls-tls"]
transport = ["dep:reqwest"]
async = ["transport"]
blocking = ["transport", "reqwest/blocking"]
history = []
news = []
rustls-tls = ["transport", "reqwest/rustls"]
native-tls = ["transport", "reqwest/default-tls"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
reqwest = { version = "0.13", optional = true, default-features = false, features = [
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"

[[example]]
name = "actual_indexes_dump"
required-features = ["blocking"]
